Fix word wrapping

--- a/src/styles/atmega-40-board.pcss
+++ b/src/styles/atmega-40-board.pcss
@@ -6,3 +6,7 @@ td:has(.yellow-bg) {
 .scrollable {
   overflow-x: auto;
 }
+
+.wrap {
+  word-wrap: break-word;
+}
